Update social URLs

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -152,7 +152,7 @@
       {% endif %}
 
       <footer class="page-footer">
-        <p class="footer-line">Made by <a href="https://www.facebook.com/mahikiransiddareddy/">@mahisiddareddy</a>. Fork me on <a href="https://github.com/mahisid/mahisid.github.io">GitHub</a>.</p>
+        <p class="footer-line">Made by <a href="https://www.facebook.com/mahikiransiddareddy/">@mahisiddareddy</a>. Fork me on <a href="https://mahisiddareddy.github.io/">GitHub</a>.</p>
         <p class="footer-line">A positive mindset brings positive things!</p>
       </footer>
 
