--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -154,6 +154,10 @@
       <footer class="page-footer">
         <p class="footer-line">Made by <a href="https://www.facebook.com/mahikiransiddareddy/">@mahisiddareddy</a>. Fork me on <a href="https://mahisiddareddy.github.io/">GitHub</a>.</p>
         <p class="footer-line">A positive mindset brings positive things!</p>
+        <p class="footer-line">Number of hits - <a href="https://www.hitwebcounter.com" target="_blank">
+        <img src="https://hitwebcounter.com/counter/counter.php?page=7891151&style=0006&nbdigits=6&type=page&initCount=0" title="Free Counter" Alt="web counter" height="14" border="0" /></a></p>
+        <!-- hitwebcounter Code START -->
+
       </footer>
 
     </div>
